# qBittorrent-custom

./: .gitmodules  CMakeLists.txt  Dockerfile.openSUSE-15  docker.sh  explore_deps.sh  qbittorrent-custom.spec.in
